src/snapshots/vm__parser__test__keyword-5.snap
---
source: src/parser.rs
expression: "keyword(\"true\").parse(\"true_\".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 4,
                        line: 1,
                        fragment: "_",
                        extra: (),
                    },
                    Nom(
                        Not,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 4,
                        line: 1,
                        fragment: "_",
                        extra: (),
                    },
                    Context(
                        "Is part of another word",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "true_",
                        extra: (),
                    },
                    Context(
                        "Keyword",
                    ),
                ),
            ],
        },
    ),
)
