src/snapshots/vm__parser__test__parse_arrays-2.snap
---
source: src/parser.rs
expression: "array_expr(r#\"[1]\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 3,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ArrayLiteral(
                [
                    Ast {
                        node: Literal(
                            Int(
                                1,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 1,
                            line: 1,
                            fragment: "1",
                            extra: (),
                        },
                    },
                ],
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "[1]",
                extra: (),
            },
        },
    ),
)
