src/snapshots/vm__parser__test__parse_assignment-2.snap
---
source: src/parser.rs
expression: "assignment_statement(\"yeet + 123;\".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 5,
                        line: 1,
                        fragment: "+ 123;",
                        extra: (),
                    },
                    Char(
                        '=',
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "yeet + 123;",
                        extra: (),
                    },
                    Context(
                        "Variable assignment",
                    ),
                ),
            ],
        },
    ),
)
