src/snapshots/vm__parser__test__parse_assignment-9.snap
---
source: src/parser.rs
expression: "assignment_statement(\"yeet + 123;\".into())"
---
Err(
    Error(
        Stack {
            base: Base {
                location: LocatedSpan {
                    offset: 6,
                    line: 1,
                    fragment: " 123;",
                    extra: (),
                },
                kind: Expected(
                    Char(
                        '=',
                    ),
                ),
            },
            contexts: [
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "yeet + 123;",
                        extra: (),
                    },
                    Context(
                        "Variable assignment",
                    ),
                ),
            ],
        },
    ),
)
